Update 7-2 메모리 주소.md

--- a/운영체제/7-2 메모리 주소.md
+++ b/운영체제/7-2 메모리 주소.md
@@ -26,17 +26,23 @@
 - ex. 단순 메모리 구조(한 번에 한 가지 일만 처리하는 일괄 처리 시스템에서 볼 수 있는 메모리 구조)
 - 메모리 관리자는 이런 메모리를 운영체제 영역과 사용자 영역으로 나누어 관리 한다. 
 - 운영체제는 시스템을 관리하는 중요한 역할을 하기 때문에, 사용자가 운영체제를 침범하지 못하도록 분리하여 관리
-  - ex. 0~999번지의 메모리 주소 공간에서 운영체제가 0~359번지를 사용하고, 사용자가 360~999번지를 사용
+  - ex. `0~999`번지의 메모리 주소 공간에서 운영체제가 `0~359`번지를 사용하고, 사용자가 `360~999`번지를 사용
+  ![image](https://user-images.githubusercontent.com/74661937/194737170-edbd5645-86f5-4d5b-954a-ed79f12f3d07.png)
+
 
 - 사용자 프로세스는 운영체제 영역을 피해서 메모리에 적재된다. 
   - 운영체제의 영역이 399번지까지 사용한다면, 사용자 프로세스가 400번지부터 적재되어야 한다.
   - 그런데 이렇게 사용자 프로세스가 운영체제 크기에 따라 매번 적재되는 주소가 달라지는 것은 매우 번거로운 일. 
     - 따라서 이를 개선하려 사용자 프로세스를 메모리 최상위부터 사용하는 방법이 있다. (ex. 999번지부터 내려오면서 사용하는 것.)
     - 운영체제 크기에 상관 없이 사용자 영역의 시작점을 결정할 수 있지만, 메모리를 거꾸로 사용하기 위해 주소를 변경하는 일이 복잡하기 때문에 잘 쓰이지 않는다고 한다.
+    ![image](https://user-images.githubusercontent.com/74661937/194737186-c33b3b4a-af20-46af-980a-65651b5234a8.png)
+
 
 - 사용자 영역이 운영체제 영역으로 침범하는 것을 막기 위해 하드웨어인 **CPU 내에 있는 경계 레지스터**의 도움이 필요하다.
   - 경계 레지스터는 운영체제 영역과 사용자 영역 경계 지점의 주소를 가진 레지스터이다. 
   - 메모리 관리자는 사용자가 작업 요청을 할 때마다 경계 레지스터의 값을 벗어나는지 검사하고, 만약 벗어나는 작업을 요청했다면 작업을 요청하는 프로세스를 종료한다.
+  ![image](https://user-images.githubusercontent.com/74661937/194737205-0bb7d01b-7f0f-4ea9-8723-fb6cc82a222e.png)
+
 
 
 ### **절대 주소와 상대 주소의 개념**
@@ -57,15 +63,19 @@
   - 상대 주소를 사용하면, 프로세스 입장에서 상대 주소가 사용할 수 없는 영역의 위치를 알 필요 없다.
   - 주소가 항상 0번지 부터 시작하기 때문에 편리하다.
   - **논리 주소 공간**
+
+  ![image](https://user-images.githubusercontent.com/74661937/194737214-007698d2-8e3f-4baa-9715-9bda862116fc.png)
+  ![image](https://user-images.githubusercontent.com/74661937/194737216-15cd6d3b-805f-4410-b645-0fa887bb29dd.png)
+
   <br>
   <br>
-
-
+  
 
 ### **상대 주소를 절대 주소로 변환하는 과정**
 - 메모리 접근 시, 절대 주소를 사용하면 특별한 변환 과정 없이 작업을 할 수 있다.
 - 반면, 상대주소를 사용하면 상대 주소를 실제 메모리 내 물리 주소(절대 주소)로 변환해야 한다.
 - 변환 과정
   - 프로세스 실행 동안 메모리 관리자가 빠르게 처리
-  - 사용자 프로세스가 상대 주소를 사용해 메모리에 접근할 때마다 상대 주소값에 재배치 레지스터 값을 더해 절대 주소를 구한다.
+  - 사용자 프로세스가 상대 주소를 사용해 메모리에 접근할 때마다 상대 주소값에 **재배치 레지스터** 값을 더해 절대 주소를 구한다.
   - 재배치 레지스터는 주소 변환의 기본이 되는 주소값을 가진 레지스터로, 메모리에서 사용자 영역의 시작 주소값이 저장된다
+  ![image](https://user-images.githubusercontent.com/74661937/194737224-1657554d-7bee-488c-94c2-ce34dce118b5.png)
